--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-paper": "^4.9.2",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
