--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-confirmation-code-field": "^7.1.0",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-paper": "^4.9.2",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
