--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.0",
-    "expo": "~42.0.1",
-    "expo-image-picker": "~10.2.2",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "expo": "^45.0.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-status-bar": "~1.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-confirmation-code-field": "^7.1.0",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-paper": "^4.9.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "12.1.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
